# 460-Final-Project

./: .gitignore  README.md  pyproject.toml
configs/: default.toml
data/: README.md
docs/: related_work.md  revised_project_outline.md
refs/: seed_papers.bib
reports/: ablation_summary.csv  cross_validation_metrics.csv  feature_importance.csv  final_results_summary.md  metrics.csv  sample_intervention_plans.md  scenario_summary.csv
src/student_success/: __init__.py  cli.py  dependencies.py  schemas.py  settings.py
src/student_success/data/: __init__.py  loaders.py
src/student_success/features/: __init__.py  engineering.py
src/student_success/interventions/: __init__.py  agent.py  catalog.py  planner.py
src/student_success/models/: __init__.py  evaluation.py  training.py
src/student_success/pipelines/: __init__.py  experiment.py  full.py
src/student_success/simulation/: __init__.py  recourse.py
tests/: test_engineering.py  test_evaluation.py  test_full_pipeline.py  test_loaders.py  test_planner.py  test_recourse.py  test_training.py
